--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">ICS342</string>
+    <string name="app_name">My Weather App</string>
+    <string name="forecast_name">Forecast</string>
     <string name="myLocation">St. Paul, MN</string>
     <string name="currentTempData">72º</string>
     <string name="feelsLike">Feels like 78º</string>
