--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">My Weather App</string>
-    <string name="forecast_name">Forecast</string>
     <string name="myLocation">St. Paul, MN</string>
     <string name="currentTempData">72º</string>
     <string name="feelsLike">Feels like 78º</string>
@@ -9,4 +8,11 @@
     <string name="humidity">Humidity 100%</string>
     <string name="stringPressure">Pressure 1024 hPa</string>
     <string name="imgDescription">Sunny</string>
+    <string name="forecast_name">Forecast</string>
+    <string name="month_name">Jan </string>
+    <string name="sunrise_name">Sunrise: </string>
+    <string name="sunset_name">Sunset: </string>
+    <string name="am_name">:00am </string>
+    <string name="pm_name">:00pm </string>
+    <string name="temp_name">Temp: </string>
 </resources>
